testdata/golden/sema/valid/entrypoint/return_option.sg
// Test: @entrypoint returning Option<int> is valid (has __to(int))
@entrypoint
fn main() -> int? {
    return nothing;
}
