testdata/golden/sema/invalid/entrypoint/mode_config.sg
// Test: @entrypoint("config") is reserved for future use
// Expected: FUT7004
@entrypoint("config")
fn main() -> int {
    return 0;
}
